--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta
       name="description"
-      content="Welcome to QUEENSFIELD Ltd. The goldmine of healthy living.,"
+      content="Welcome to QUEENSFIELD Ltd. The goldmine of healthy living. We deal with the production of healthy and natural farm and dry sea food - Asa fish, Mangala fish, 
+      Stock fish, Prawn, Crayfish, etc."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
